--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,4 +123,9 @@ input {
   font-weight: 500;
   margin-right: 1rem;
 }
+
+
+#resetBtn{
+  margin-top: 1rem;
+}
 /*# sourceMappingURL=style.css.map */
