--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -89,9 +89,6 @@ main {
     }
 }
 
-
-
-
 .section-2 {
 
     // width: 100%;
@@ -136,3 +133,11 @@ input {
         margin-right: 1rem;
     }
 }
+
+
+
+  
+  .btn-mix{
+    margin-bottom: 1rem;
+  }
+  
